# practice-code

./: .gitattributes  .gitignore  LICENSE  matrixcalculator.py
C-lang/: main.c  test.c  test1.c
Logisim/: BinaryAdder.circ
Projects/ATLAS/: atlas.py  projectWorkflows.tldr
Python/: builtinfuncs.py  fileEncryption.py
Python/LearningResources/: main.tldr
Python/Projects/ATLAS/: Description.md
Python/Projects/Browser_by_AI/: browser_ai.py  requirements.txt
Python/Projects/Chess_game_by_AI/: chess_game_ai.py
Python/Projects/library_manager/: library_system.py
Python/Projects/matrix_functions/: matrixfunctions.py
Python/Scripts/: New-Bubble-Sort.py  customfunctions.py  filesystem_search.py  test.ipynb  test.json  test.py  test.txt  tkinter_.py  wifi_pass.py
Python/Scripts/sockets/: client.py  server.py
Python/TFL/: dataexp.py  hello.py  response1.json  response2.json
Python/asyncio/: main.py  myasync.py
Python/matrixfunctions_project/: README.md  pyproject.toml
Python/matrixfunctions_project/src/matrixfunctions/: __init__.py  functions.py
Python/sockets/: client.py  server.py
Scripts/: New-Insertion-Sort.py  table_generator.py  test.c
Web/: index.html  script.js  style.css  test.http
